--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+**/output/**
+**/input/**
+**/input/**
+.csv
+.dat
+**/Resultados/**
+.pluvia
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
