--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
             
             echo "Starting deployment..."
             
-            cd /WX2TB/Documentos/fontes/PMO/raizen-power-trading-estudos-middle || exit 1
+            cd /projetos/raizen-power-trading-estudos-middle || exit 1
             
             git config --local credential.helper '!f() { echo "username=${{ secrets.GIT_USERNAME }}"; echo "password=${{ secrets.GIT_TOKEN }}"; }; f'
             
@@ -53,6 +53,19 @@ jobs:
             
             git config --local --unset credential.helper
             
+            echo "Building and starting containers..."
+            sudo docker-compose build --no-cache
+            sudo docker-compose up -d
+            
+            echo "Verifying deployment..."
+            sleep 5
+            if sudo docker-compose ps | grep -q "Up"; then
+              echo "Deployment successful!"
+            else
+              echo "Deployment may have failed - check container status"
+              sudo docker-compose logs --tail=20
+              exit 1
+            fi
           EOF
 
       - name: Cleanup SSH keys
