--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,7 @@ jobs:
             git config --local --unset credential.helper
             
             echo "Building and starting containers..."
+            sudo docker pull python:3.12-alpine
             sudo docker-compose build --no-cache
             sudo docker-compose up -d
             
